lib lê e apresenda dados de licença